# cooklang-recipes

./: .pre-commit-config.yaml  README.md  generate.sh  install-cooklang.sh  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
recipes/curry/eggplant-keema-with-three-spices/: eggplant-keema-with-three-spices.cook  eggplant-keema-with-three-spices.json  eggplant-keema-with-three-spices.md  eggplant-keema-with-three-spices.yaml
