[tool.poetry]
name = "cooklang-recipe"
version = "0.1.0"
description = "Cooklang recipe vault"
authors = ["eggplants <w10776e8w@yahoo.co.jp>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cooklang_recipe"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
