[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=2",
]

[project]
name = "cooklang-recipe"
version = "0.1.0"
description = "Cooklang recipe vault"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "eggplants", email = "w10776e8w@yahoo.co.jp" },
]
requires-python = ">=3.11,<4"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
urls.Repository = "https://github.com/eggplants/cooklang-recipes"

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false
packages = [
  { include = "cooklang_recipe" },
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
