[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "cooklang-recipe"
version = "0.1.0"
description = "Cooklang recipe vault"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "eggplants", email = "w10776e8w@yahoo.co.jp" } ]
requires-python = ">=3.13,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]

urls.Repository = "https://github.com/eggplants/cooklang-recipes"

[dependency-groups]
dev = [
  "pre-commit",
]

[tool.hatch.build.targets.sdist]
include = [ "cooklang_recipe" ]

[tool.hatch.build.targets.wheel]
include = [ "cooklang_recipe" ]

[tool.uv]
package = false
